// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs block with small width 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  width: 100%;
  overflow: hidden;
}

.emotion-1 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  color: #040b1d;
  -webkit-font-smoothing: antialiased;
  white-space: nowrap;
  position: relative;
  cursor: pointer;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
  width: 100%;
}

.emotion-3 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  margin: 0 6px;
  color: #8e9199;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  white-space: nowrap;
}

.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor:pointer:color: #8e9199;
  color: #8e9199;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
}

.emotion-4 b {
  font-weight: 600;
}

.emotion-4:hover,
.emotion-4:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4 a:link,
.emotion-4 a:visited,
.emotion-4:active {
  color: #8e9199;
}

.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 1px;
}

<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="emotion-0"
  >
    <span
      className="emotion-1"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      Project name-2948474770249-999-202995477...
    </span>
    <div
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        /
      </span>
      <a
        className="emotion-4"
        href="/tarantool"
        onClick={[Function]}
      >
        @tarantool.io/ui-kit
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
      <a
        className="emotion-4"
        href="/section-ui-components"
        onClick={[Function]}
      >
        UI Components
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
      <a
        className="emotion-4"
        href="/breadcrumb"
        onClick={[Function]}
      >
        Breadcrumb
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
      <a
        className="emotion-4"
        href="/overflow-list"
        onClick={[Function]}
      >
        OverflowList
      </a>
      <span
        className="emotion-3"
      >
        /
      </span>
      <a
        className="emotion-4"
        href="/resize-sensor"
        onClick={[Function]}
      >
        ResizeSensor
      </a>
      <div
        className="emotion-13"
      />
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs renders correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  width: 100%;
  overflow: hidden;
}

.emotion-1 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  color: #040b1d;
  -webkit-font-smoothing: antialiased;
  white-space: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
  width: 100%;
}

.emotion-3 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  margin: 0 6px;
  color: #8e9199;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  white-space: nowrap;
}

.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor:pointer:color: #8e9199;
  color: #8e9199;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
}

.emotion-4 b {
  font-weight: 600;
}

.emotion-4:hover,
.emotion-4:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4 a:link,
.emotion-4 a:visited,
.emotion-4:active {
  color: #8e9199;
}

.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 1px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
  >
    Project name
  </span>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/tarantool"
      onClick={[Function]}
    >
      @tarantool.io/ui-kit
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/section-ui-components"
      onClick={[Function]}
    >
      UI Components
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/breadcrumb"
      onClick={[Function]}
    >
      Breadcrumb
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/overflow-list"
      onClick={[Function]}
    >
      OverflowList
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/resize-sensor"
      onClick={[Function]}
    >
      ResizeSensor
    </a>
    <div
      className="emotion-13"
    />
  </div>
</div>
`;

exports[`Breadcrumbs renders correctly long name 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  width: 100%;
  overflow: hidden;
}

.emotion-1 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  color: #040b1d;
  -webkit-font-smoothing: antialiased;
  white-space: nowrap;
  position: relative;
  cursor: pointer;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
  width: 100%;
}

.emotion-3 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  margin: 0 6px;
  color: #8e9199;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  white-space: nowrap;
}

.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor:pointer:color: #8e9199;
  color: #8e9199;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
}

.emotion-4 b {
  font-weight: 600;
}

.emotion-4:hover,
.emotion-4:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4 a:link,
.emotion-4 a:visited,
.emotion-4:active {
  color: #8e9199;
}

.emotion-4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 1px;
}

<div
  className="emotion-0"
>
  <span
    className="emotion-1"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    Project name-2948474770249-999-202995477...
  </span>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/tarantool"
      onClick={[Function]}
    >
      @tarantool.io/ui-kit
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/section-ui-components"
      onClick={[Function]}
    >
      UI Components
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/breadcrumb"
      onClick={[Function]}
    >
      Breadcrumb
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/overflow-list"
      onClick={[Function]}
    >
      OverflowList
    </a>
    <span
      className="emotion-3"
    >
      /
    </span>
    <a
      className="emotion-4"
      href="/resize-sensor"
      onClick={[Function]}
    >
      ResizeSensor
    </a>
    <div
      className="emotion-13"
    />
  </div>
</div>
`;
